feat: update to emulator 0.17
Implement download/copy/build uarch.
General improvements in machine bindings.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,2 @@
-Gabriel Coutinho de Paula <GCdePaula@gmail.com>
+Gabriel Coutinho de Paula <gcdepaula@protonmail.com>
 Stephen Chen <20940639+stephenctw@users.noreply.github.com>
-Sofia Rodrigues <algebraic.sofia+github@gmail.com>
